# guardian-drive

./: .env  .env.example  .gitignore  CAMERA_ONLY_CONSTRAINT.md  CHANGELOG.md  CONTRIBUTING.md  CUDA_KERNELS.md  DISTRIBUTED_TRAINING.md  FMEA.md  LICENSE  MLOPS.md  Makefile  README.md  REAL_GD_START.md  REGULATORY_PATHWAY.md  SECURITY.md  app.py  backend_server.py  benchmark_libtorch.py  bootstrap_seat_runtime.sh  carla_guardian_agent.py  convert_final.py  convert_tensorrt.py  convert_to_coreml.py  fix_and_convert.sh  gd_dedup_unify.sh  guardian_dreamview_fresh.html  guardian_drive_readme.html  live_demo.py  live_demo_simple.py  live_webcam.py  live_webcam2.py  main.py  patch_voice.py  pyproject.toml  readme-cover  requirements-integrations.txt  requirements-ml.txt  requirements-ui.txt  requirements-vision.txt  (+2 more)
acquisition/: argoverse2_loader.py  bdd100k_loader.py  kitti_loader.py  models.py  monocular_bev.py  nuscenes_bev.py  ring_buffer.py  seat_ecg_node.py  simulator.py  slam_mapper.py  structure_from_motion.py  visual_inertial_odometry.py  visual_odometry.py
benchmarks/: summarize_results.py
bev_perception/: hd_map_vectorizer.py  nuscenes_stream.py  pointpillars.py  semantic_segmentation.py
camera_robustness/: run_robustness_suite.py
config/: default.yaml  seat_runtime.yaml
configs/: wesad_physio.yaml
cpp_inference/: CMakeLists.txt  RUNTIME_ARCHITECTURE.md  guardian_inference.cpp
cpp_runtime/: CMakeLists.txt
cpp_runtime/include/: spsc_ring_buffer.hpp
cpp_runtime/src/: guardian_runtime.cpp
cpp_runtime/tests/: test_spsc_ring_buffer.cpp
dashboard/: guardian_dreamview_fresh.html  guardian_perception_3d.html
demo/: run_cpu_demo.py
docs/: ARCHITECTURE.md  REPO_ADAPTATION_PLAN.md  SAFETY.md  maturity_levels.md  real_world.md
evaluation/: metrics.py  runner.py
features/: ecg_filter.py  extract.py  hrv_live.py  resp_estimate.py  rpeak_detect.py
gd_logging/: event_log.py
guardian_drive_tcn.mlpackage/: Manifest.json
integrations/: base.py  discord_webhook.py  emergency_contact.py  emergency_dispatch.py  gps_mac.py  gps_mock.py  gps_runtime.py  hospital_routing.py  impairment_classifier.py  llm_alerts.py  navigation_local.py  navigation_osm.py  navigation_osrm.py  nyc_live_cameras.py  poi_router.py  rest_poi_osm.py  seat_haptic.py  seat_haptics.py  slack_integration.py  telephony_console.py  telephony_discord.py  telephony_twilio.py  vehicle_obd.py  vehicle_sim.py  vision_webcam.py  voice_alerts.py  voice_runtime.py
learned/: cuda_features.py  datasets.py  infer_task_b.py  mlp.py  models_tcn.py  ssl_pretrain.py  task_a_deep_ecg.py  task_a_metrics.py  task_a_trainer.py  task_b_trainer.py  train_task_b.py  waypoint_transformer.py
models/: __init__.py  model_utils.py  predictive_fusion.py  task_a.py  task_b.py  task_c.py  task_d_stroke_screen.py  train_task_a.py  train_task_a_real_ptbxl.py  train_task_b.py  train_task_c.py
outputs/: ablation_results.json  argoverse2_benchmark.json  bev_real_runs.json  carla_evaluation_results.json  carla_real_evaluation_results.json  combined_training_results.json  federated_results.json  hd_map_vectorization_results.json  master_results.json  multiclass_detection_results.json  pointpillars_augmented_results.json  pointpillars_finetuned_results.json  pointpillars_full_eval.json  pointpillars_real_results.json  pointpillars_results.json  pointpillars_training_results.json  ptbxl_cardiac_results.json  right_seater_demo.json  semantic_seg_results.json  speed_benchmark_results.json  stroke_detection_results.json  synthetic_lidar_results.json  tensorrt_deployment_results.json
policy/: fusion.py  medical_guardrail.py  rl_agent.py  state_machine.py
scenarios/: ecg_dropout.json  low_sqi_no_false_escalation.json  microsleep_escalation.json  sunglasses_known_limitation.json
scripts/: train_all.py
server/: app.py  app_patch.py  data_logger.py  fleet_aggregator.py  pipeline_integration.py  routes_sensor.py
sim/: README.md  carla_bridge.py
sqi/: compute.py  contact_quality.py  motion_artifact.py  window_quality.py
tests/: test_ear.py  test_fusion_weights.py  test_hrv_features.py  test_hrv_live.py  test_pipeline.py  test_ring_buffer.py  test_sqi.py  test_sqi_shape.py  test_state_machine.py  test_window_quality.py
tools/: build_windows_from_ecg_csv.py  list_serial_ports.py  record_serial_ecg.py  right_seater.py  (+1 more)
(+69 files in other folders)
